--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "",
   "main": "index.js",
   "engines": {
-    "node": ">=18"
+    "node": "18"
   },
   "scripts": {
     "dev": "tsx watch src/server.ts",
     "lint": "eslint src --ext .ts --fix",
-    "knex": "node --no-warnings --loader tsx ./node_modules/.bin/knex",
+    "knex": "node --no-warnings --import tsx ./node_modules/.bin/knex",
     "test": "vitest",
     "build": "tsup src --out-dir build"
   },
